# cloudpulse-horizon

./: .gitignore  AUTHORS  MANIFEST.in  README.rst  requirements-dev.txt  setup.cfg  tox.ini
cloudpulse_horizon/api/: cloudpulse.py
cloudpulse_horizon/dashboard/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
cloudpulse_horizon/dashboard/templates/cloudpulse/: _detail_overview.html  index.html  test_details.html
cloudpulse_horizon/enabled/: _9000_admin_panel_cloudpulse_horizon.py
