[metadata]
name = cloudpulse-horizon
summary = A cloudpulse panel plugin for OpenStack Dashboard
description-file =
    README.rst
author = Dmitry Ratushnyy
author_email = d.ratushnyy@gmail.com
home-page = https://launchpad.net/openstack-horizon
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    cloudpulse_horizon